created frontend for post new listing; fully functional except for authorization; not tested yet
